// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorSummary render child components if provided 1`] = `
<div
  aria-describedby="error-summary-heading"
  aria-relevant="all"
  data-testid="error-summary-container"
  id="error-summary-container"
  role="alert"
  tabindex="-1"
>
  <div
    class="t-error-summary border-4 w-full border-red-600 md:p-8 p-6 outline-none"
    data-testid="error-records"
  >
    <h2
      class="text-xl md:text-2xl text-gray-800 font-bold mb-3"
      data-testid="error-summary-heading"
      id="error-summary-heading"
    >
      Error Summary
    </h2>
    <p>
      Child component
    </p>
    <div
      class="flex items-center"
      data-testid="list-element"
    >
      <ul
        class="marker:mr-2 marker:pr-2 marker:leading-snug list-disc text-red-600 space-y-4 marker:text-red-600 pl-6 ml-4 mb-6"
        start="-1"
      >
        <li
          class="underline text-base decoration-solid text-red-600 break-words"
        >
          <a
            class="inline-flex items-center gap-2 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-red-600 whitespace-pre-wrap"
            data-testid="error-link-0"
            href="#error1"
          >
            Error message 1
          </a>
        </li>
        <li
          class="underline text-base decoration-solid text-red-600 break-words"
        >
          <a
            class="inline-flex items-center gap-2 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-red-600 whitespace-pre-wrap"
            data-testid="error-link-1"
            href="#error2"
          >
            Error message 2
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ErrorSummary renders component 1`] = `
<div
  aria-describedby="error-summary-heading"
  aria-relevant="all"
  data-testid="error-summary-container"
  id="error-summary-container"
  role="alert"
  tabindex="-1"
>
  <div
    class="t-error-summary border-4 w-full border-red-600 md:p-8 p-6 outline-none"
    data-testid="error-records"
  >
    <h2
      class="text-xl md:text-2xl text-gray-800 font-bold mb-3"
      data-testid="error-summary-heading"
      id="error-summary-heading"
    >
      Error Summary
    </h2>
    <div
      class="flex items-center"
      data-testid="list-element"
    >
      <ul
        class="marker:mr-2 marker:pr-2 marker:leading-snug list-disc text-red-600 space-y-4 marker:text-red-600 pl-6 ml-4 mb-6"
        start="-1"
      >
        <li
          class="underline text-base decoration-solid text-red-600 break-words"
        >
          <a
            class="inline-flex items-center gap-2 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-red-600 whitespace-pre-wrap"
            data-testid="error-link-0"
            href="#error1"
          >
            Error message 1
          </a>
        </li>
        <li
          class="underline text-base decoration-solid text-red-600 break-words"
        >
          <a
            class="inline-flex items-center gap-2 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none text-red-600 whitespace-pre-wrap"
            data-testid="error-link-1"
            href="#error2"
          >
            Error message 2
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
